name:                tcp-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinf/tcp-client#readme
license:             BSD3
license-file:        LICENSE
author:              Zelin Feng
maintainer:          fengzlin@mail2.sysu.edu.cn
copyright:           Copyright Zelin Feng 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tcp-client
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , network
    , bytestring
    , text
    , optparse-applicative
